--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,3 +2,8 @@ $brand: #316FAF;
 $black: #11273D;
 $white: #ffffff;
 $gray: #f5f5f5;
+
+// google font Instrument Sans
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
+
+
