--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,6 @@
-$brand: #316FAF;
-$black: #11273D;
-$white: #ffffff;
+$brand-color: #316FAF;
+$heading-color: #11273D;
+$text-color: #4D4D4D;
 $gray: #f5f5f5;
-
-// google font Instrument Sans
-@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
-
-
+$white: #ffffff;
+$grey: #D3E0EB;
