added partials and mixins

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,5 +4,7 @@
 @import "reset";
 @import "media";
 @import "typography";
+@import "mixins";
 @import "component";
+@import "header";
 @import "hero";
