added partials and mixins

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -147,3 +147,8 @@ html {
 .navbar-toggler {
     font-size: 3.6rem;
 }
+.img-fluid{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
