--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,35 @@
-﻿.main-header{
-   padding: 1.8rem 0; 
+﻿.main-header {
+    padding: 1.8rem 0;
+
+    &-wrapper {
+        display: -webkit-box;
+        display: flex;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: justify;
+        justify-content: space-between;
+    }
+
+    &-logo-wrapper {
+        max-width: 10.1rem;
+    }
+
+    &-list {
+        display: -webkit-box;
+        display: flex;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        justify-content: center;
+        -webkit-column-gap: 2.8rem;
+        -moz-column-gap: 2.8rem;
+        column-gap: 2.8rem;
+
+        &-item {
+            &-link {
+                @include text-style($font-heading, 500, 1.5rem, 1, $heading-color, uppercase);
+            }
+        }
+    }
+
 }
