--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -2,14 +2,11 @@
   padding: 8rem 0;
 
   &-heading {
-    font-size: 7.5rem;
-    line-height: 1.2;
-    margin-bottom: 2rem;
+     @include text-style($font-heading, 500, 7.5rem, 1.2, $heading-color, uppercase);
   }
 
   &-text {
-    font-size: 1.8rem;
-    line-height: 1.6;
+     @include text-style($font-body, 400, 1.8rem, 1.6, $text-color);
     margin-bottom: 2rem;
   }
   &-buttons-wrapper{
@@ -21,10 +18,6 @@
        -moz-column-gap: 2rem;
             column-gap: 2rem;
   }
-  &-button{
-    font-size: 1.5rem;
-    width: 24.6rem;
-    height: 5.6rem;
-  }
+  
 }
 
