--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -9,15 +9,15 @@
     display: -webkit-box;
     display: flex;
     -webkit-box-align: center;
-            align-items: center;
+    align-items: center;
     -webkit-box-pack: center;
-            justify-content: center;
+    justify-content: center;
     border-radius: 4rem;
     font-family: 'Clash Display Medium', sans-serif;
     text-transform: uppercase;
     -webkit-column-gap: 1rem;
-       -moz-column-gap: 1rem;
-            column-gap: 1rem;
+    -moz-column-gap: 1rem;
+    column-gap: 1rem;
 
     width: $width;
     height: $height;
@@ -25,4 +25,20 @@
     background-color: $bg-color;
     color: $text-color;
     border: 1px solid $border-color;
+}
+
+@mixin text-style(
+  $font-family,
+  $font-weight: 400,
+  $font-size: $font-size-base,
+  $line-height: $line-height-base,
+  $color: $text-color,
+  $transform: none
+) {
+  font-family: $font-family;
+  font-weight: $font-weight;
+  font-size: $font-size;
+  line-height: $line-height;
+  color: $color;
+  text-transform: $transform;
 }
