--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,10 +1,6 @@
 ﻿.main-heading{
-    font-family: 'Clash Display Medium', sans-serif;
-    color: $heading-color;
-    text-transform: uppercase;
+    @include text-style($font-heading, 500, 4.8rem, 1.2, $heading-color, uppercase);
 }
 .main-text{
-    font-family: "Instrument Sans", sans-serif;
-    font-weight: 400;
-    color: $text-color;
+      @include text-style($font-body, 400, 1.8rem, 1.6, $text-color);
 }
