--- a/scss/_investments.scss
+++ b/scss/_investments.scss
@@ -1,104 +1,124 @@
 ﻿.investments {
-  padding: 0 0 8rem 0;
+    padding: 0 0 8rem 0;
 
-  &-heading {
-    @include text-style($font-heading, 500, 4.2rem, 1.2, $heading-color, uppercase);
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-
-  &-text {
-    @include text-style($font-body, 400, 1.6rem, 1.5, $text-color);
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-
-  // wrapper na slider
-  .slider-wrapper {
-    position: relative;
-    max-width: 128rem; // dostosuj do siatki projektu
-    margin: 0 auto;
-    overflow: hidden;
-
-    .slider {
-      display: -webkit-box;
-      display: flex;
-      -webkit-transition: -webkit-transform 0.5s ease;
-      transition: -webkit-transform 0.5s ease;
-      transition: transform 0.5s ease;
-      transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+    &-heading {
+        @include text-style($font-heading, 500, 4.2rem, 1.2, $heading-color, uppercase);
+        text-align: center;
+        margin-bottom: 2rem;
     }
 
-    .slide {
-      min-width: 100%;
-      box-sizing: border-box;
-      padding: 2rem;
-      display: -webkit-box;
-      display: flex;
-      -webkit-box-pack: justify;
-              justify-content: space-between;
-      -webkit-box-align: center;
-              align-items: center;
-
-      .left-side {
-        max-width: 51.5rem;
-
-        .icon-wrapper {
-          display: -webkit-box;
-          display: flex;
-          -webkit-box-align: center;
-                  align-items: center;
-          -webkit-column-gap: 1rem;
-             -moz-column-gap: 1rem;
-                  column-gap: 1rem;
-
-          .icon-text {
-            @include text-style($font-heading, 500, 1.5rem, 1.6, $text-color);
-          }
-        }
-
-        .slide-heading {
-          @include text-style($font-heading, 500, 3.2rem, 1.4, $heading-color, uppercase);
-          margin-bottom: 1rem;
-        }
-
-        .slide-text {
-          @include text-style($font-body, 400, 1.6rem, 1.6, $text-color);
-          margin-bottom: 4.2rem;
-        }
-
-        .slide-button {
-          @include button-base(25.2rem, 5.6rem, 1.5rem, $brand-color, #fff);
-        }
-      }
-
-      .right-side {
-        max-width: 73.8rem;
-      }
+    &-text {
+        @include text-style($font-body, 400, 1.6rem, 1.5, $text-color);
+        text-align: center;
+        margin-bottom: 2rem;
     }
 
-    // guziki prev/next
-    .slider-btn {
-      position: absolute;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-              transform: translateY(-50%);
-      background: rgba(0, 0, 0, 0.5);
-      color: #fff;
-      border: none;
-      font-size: 2rem;
-      cursor: pointer;
-      padding: 0.5rem 1rem;
-      border-radius: 50%;
-      z-index: 10;
+    // wrapper na slider
+    .slider-wrapper {
+        position: relative;
+        max-width: 128rem;
+        margin: 0 auto;
+        overflow: hidden;
+        width: 100%;
 
-      &.prev {
-        left: 10px;
-      }
+        .slider {
+            display: -webkit-box;
+            display: flex;
+            -webkit-transition: -webkit-transform 0.5s ease;
+            transition: -webkit-transform 0.5s ease;
+            transition: transform 0.5s ease;
+            transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+        }
 
-      &.next {
-        right: 10px;
-      }
+        .slide {
+            -webkit-box-flex: 0;
+            flex: 0 0 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+
+            display: -webkit-box;
+
+            display: flex;
+            -webkit-box-pack: justify;
+            justify-content: space-between;
+            -webkit-box-align: center;
+            align-items: center;
+
+            .left-side {
+                max-width: calc(100% - 73.3rem);
+                padding: 6.15rem 3.6rem 3.7rem 3.6rem;
+                background-color: $white;
+                width: 100%;
+                height: 100%;
+                border: 1px solid $grey;
+
+                .icon-wrapper {
+                    display: -webkit-box;
+                    display: flex;
+                    -webkit-box-align: center;
+                    align-items: center;
+                    -webkit-column-gap: 1rem;
+                    -moz-column-gap: 1rem;
+                    column-gap: 1rem;
+
+                    .icon-text {
+                        @include text-style($font-heading, 500, 1.5rem, 1.6, $text-color);
+                    }
+                }
+
+                .slide-heading {
+                    @include text-style($font-heading, 500, 3.2rem, 1.4, $heading-color, uppercase);
+                    margin-bottom: 1rem;
+                }
+
+                .slide-text {
+                    @include text-style($font-body, 400, 1.6rem, 1.6, $text-color);
+                    margin-bottom: 4.2rem;
+                }
+
+                .slide-button {
+                    @include button-base(25.2rem, 5.6rem, 1.5rem, $brand-color, #fff);
+                }
+            }
+
+            .right-side {
+                max-width: 73.8rem;
+                img{
+                    border-top-right-radius: 1.2rem;
+                    border-bottom-right-radius: 1.2rem;
+                }
+            }
+        }
+
+        // guziki prev/next
+        .slider-btn {
+            position: absolute;
+            padding: 0;
+            top: 45rem;
+            border: none;
+            cursor: pointer;
+            border-radius: 50%;
+            z-index: 10;
+            background-color: transparent;
+            &:hover{
+                opacity: 0.25;
+            }
+            &-image {
+                max-width: 5.3rem;
+            }
+
+            &.prev {
+                left: 3.6rem;
+
+                .slider-btn-image {
+                    -webkit-transform: rotateY(180deg);
+                    transform: rotateY(180deg);
+                }
+            }
+
+            &.next {
+                left: 9.9rem;
+            }
+        }
     }
-  }
 }
