--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -4,3 +4,8 @@
 .main-button-white {
    @include button-base(20rem, 4.6rem, 1.6rem, $white, $heading-color, $grey);
 }
+.field-label{
+     @include text-style($font-heading, 500, 1.4rem, 2, $heading-color, uppercase); 
+     letter-spacing: -2%;
+     margin-bottom: 1rem;
+}
