--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,8 @@ $text-color: #4D4D4D;
 $gray: #f5f5f5;
 $white: #ffffff;
 $grey: #D3E0EB;
-
+$form-bg: #ECF4FA;
+$form-subbg: #F6FBFF;
 $font-body: 'Instrument Sans', sans-serif;
 $font-heading: 'Clash Display Medium', sans-serif;
 $font-regular: 'Clash Display', sans-serif;
