--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -9,3 +9,11 @@
      letter-spacing: -2%;
      margin-bottom: 1rem;
 }
+.field-input{
+    @include text-style($font-body, 400, 1.6rem, 1.6, $text-color);
+    height: 5rem;
+    padding-left: 1.2rem;
+    letter-spacing: -2%;
+    border: 1px solid $grey;
+    border-radius: 0.8rem;
+}
