--- a/scss/_real-estates.scss
+++ b/scss/_real-estates.scss
@@ -15,6 +15,7 @@
         justify-content: flex-start;
         flex-wrap: wrap;
         gap: 3.2rem;
+        margin-bottom: 8rem;
 
         .item {
             -webkit-box-flex: 1;
@@ -38,5 +39,6 @@
     }
     .load-more{
         @include button-base(26rem, 5.6rem, 1.5rem, $brand-color, #fff);
+        margin: 0 auto;
     }
 }
