vsc change coding

--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -1,4 +1,4 @@
-﻿.main-button-brand {
+.main-button-brand {
      @include button-base(20rem, 4.6rem, 1.6rem, $brand-color, #fff);
 }
 .main-button-white {
