--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,4 +1,4 @@
-﻿.main-heading{
+.main-heading{
     @include text-style($font-heading, 500, 4.8rem, 1.2, $heading-color, uppercase);
 }
 .main-text{
