--- a/scss/_investments.scss
+++ b/scss/_investments.scss
@@ -84,6 +84,7 @@
             .right-side {
                 max-width: 73.8rem;
                 img{
+                    max-width: 100%;
                     border-top-right-radius: 1.2rem;
                     border-bottom-right-radius: 1.2rem;
                 }
