--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -1,61 +1,127 @@
 ﻿@media (max-width: 767px) {
-    .hero-heading{
+    .hero-heading {
         font-size: 5rem;
     }
-    .hero-buttons-wrapper{
+
+    .hero-buttons-wrapper {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        flex-direction: column;
+        row-gap: 3rem;
+        -webkit-box-align: start;
+        align-items: flex-start;
+    }
+
+    .main-header nav {
+        display: none;
+    }
+
+    .main-header .hamburger {
+        display: block;
+    }
+    .main-header nav{
+          display: -webkit-box;
+        display: flex;
+        -webkit-box-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+                justify-content: center;
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        -webkit-transition: 1s ease-in-out;
+    transition: 1s ease-in-out;
+        top: 0;
+        left: -100vw;
+    }
+    .main-header-list{
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
                 flex-direction: column;
-                row-gap: 3rem;
-                -webkit-box-align: start;
-                        align-items: flex-start;
+                row-gap: 2rem;
     }
-    .main-header nav{
-        display: none;
+.main-header .close-icon{
+    position: absolute;
+    max-width: 4rem;
+    top: 3rem;
+    left: 3rem;
+    cursor: pointer;
+}
+    .main-header.is-open nav {
+        display: -webkit-box;
+        display: flex;
+        -webkit-box-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+                justify-content: center;
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        background-color: $white;
+        z-index: 999;
+        -webkit-backdrop-filter: blur(6px);
+                backdrop-filter: blur(6px);
+    background: rgba(255, 255, 255, 0.7);
+    -webkit-transition: 1s ease-in-out;
+    transition: 1s ease-in-out;
     }
-    .main-header .hamburger{
-        display: block;
-    }
-    section, .main-header, .main-footer{
+
+    section,
+    .main-header,
+    .main-footer {
         padding-left: 2rem !important;
         padding-right: 2rem !important;
     }
-    .investments .slider-wrapper .slide{
+
+    .investments .slider-wrapper .slide {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-                flex-direction: column;
+        flex-direction: column;
     }
-    .investments .slider-wrapper .slide .left-side{
+
+    .investments .slider-wrapper .slide .left-side {
         max-width: 100%;
         border: none;
         padding-left: 0;
         padding-right: 0;
     }
-    .investments .slider-wrapper .slide .right-side{
+
+    .investments .slider-wrapper .slide .right-side {
         max-width: 100%;
     }
-    .investments .slider-wrapper .slider-btn{
+
+    .investments .slider-wrapper .slider-btn {
         bottom: 5rem;
         top: unset;
     }
-    .contact .form-wrapper form .inputs-wrapper{
+
+    .contact .form-wrapper form .inputs-wrapper {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-                flex-direction: column;
+        flex-direction: column;
     }
-     .contact .form-wrapper form .field-wrapper{
+
+    .contact .form-wrapper form .field-wrapper {
         margin-bottom: 2rem;
-     }
-    .contact .form-wrapper form .field-wrapper:first-of-type{
+    }
+
+    .contact .form-wrapper form .field-wrapper:first-of-type {
         width: 100%;
     }
-    .contact .form-wrapper form .field-wrapper:nth-of-type(2){
+
+    .contact .form-wrapper form .field-wrapper:nth-of-type(2) {
         width: 100%;
     }
-    .contact .form-wrapper form .field-wrapper:nth-of-type(3){
+
+    .contact .form-wrapper form .field-wrapper:nth-of-type(3) {
         width: 100%;
     }
-    .investments-heading, .real-estates-heading, .contact-heading{
+
+    .investments-heading,
+    .real-estates-heading,
+    .contact-heading {
         font-size: 3.2rem;
     }
 }
