--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -19,41 +19,46 @@
     .main-header .hamburger {
         display: block;
     }
-    .main-header nav{
-          display: -webkit-box;
+
+    .main-header nav {
+        display: -webkit-box;
         display: flex;
         -webkit-box-align: center;
-                align-items: center;
+        align-items: center;
         -webkit-box-pack: center;
-                justify-content: center;
+        justify-content: center;
         position: absolute;
         width: 100vw;
         height: 100vh;
         -webkit-transition: 1s ease-in-out;
-    transition: 1s ease-in-out;
+        transition: 1s ease-in-out;
         top: 0;
         left: -100vw;
     }
-    .main-header-list{
+
+    .main-header-list {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-                flex-direction: column;
-                row-gap: 2rem;
+        flex-direction: column;
+        row-gap: 2rem;
     }
-.main-header .close-icon{
-    position: absolute;
-    max-width: 4rem;
-    top: 3rem;
-    left: 3rem;
-    cursor: pointer;
-}
+
+    .main-header .close-icon {
+        display: block;
+        position: absolute;
+        max-width: 4rem;
+        top: 3rem;
+        left: 3rem;
+        cursor: pointer;
+    }
+
     .main-header.is-open nav {
         display: -webkit-box;
         display: flex;
         -webkit-box-align: center;
-                align-items: center;
+        align-items: center;
         -webkit-box-pack: center;
-                justify-content: center;
+        justify-content: center;
         position: absolute;
         width: 100vw;
         height: 100vh;
@@ -62,10 +67,10 @@
         background-color: $white;
         z-index: 999;
         -webkit-backdrop-filter: blur(6px);
-                backdrop-filter: blur(6px);
-    background: rgba(255, 255, 255, 0.7);
-    -webkit-transition: 1s ease-in-out;
-    transition: 1s ease-in-out;
+        backdrop-filter: blur(6px);
+        background: rgba(255, 255, 255, 0.7);
+        -webkit-transition: 1s ease-in-out;
+        transition: 1s ease-in-out;
     }
 
     section,
